--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "jquery": "^3.7.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
