--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jquery": "^3.7.1",
     "owl.carousel": "^2.3.4",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-carousel": "^0.3.1"
   },
   "devDependencies": {
     "@rollup/plugin-inject": "^5.0.5",
