--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "aos": "^2.3.4",
+    "axios": "^1.6.6",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "jquery": "^3.7.1",
@@ -19,7 +22,8 @@
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
     "vue3-autocounter": "^1.0.6",
-    "vue3-carousel": "^0.3.1"
+    "vue3-carousel": "^0.3.1",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
