--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.7.1",
     "libphonenumber-js": "^1.10.54",
     "maz-ui": "^3.31.6",
+    "qrcode.vue": "^3.4.1",
     "typed.js": "^2.1.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
