--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-router": "^4.2.5",
     "vue3-autocounter": "^1.0.6",
     "vue3-carousel": "^0.3.1",
+    "vuejs-paginate": "^2.1.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
